@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-04-07T01:15:45Z",
+  "timestamp" : "2022-04-08T16:24:32Z",
   "count_outdated" : 61,
   "uniques_outdated" : 47,
-  "count" : 106,
-  "uniques" : 72,
+  "count" : 110,
+  "uniques" : 75,
   "clones" : [
     {
       "timestamp": "2022-03-29T00:00:00Z",
@@ -32,6 +32,13 @@
       "count_minmax": [ 0, 10 ],
       "uniques": 6,
       "uniques_minmax": [ 0, 6 ]
+    },
+    {
+      "timestamp": "2022-04-08T00:00:00Z",
+      "count": 4,
+      "count_minmax": [ 4, 4 ],
+      "uniques": 3,
+      "uniques_minmax": [ 3, 3 ]
     }
   ]
 }
