@@ -1,5 +1,5 @@
 {
-  "count": 45,
+  "count": 49,
   "uniques": 18,
   "clones": [
     {
@@ -21,6 +21,11 @@
       "timestamp": "2022-04-02T00:00:00Z",
       "count": 10,
       "uniques": 6
+    },
+    {
+      "timestamp": "2022-04-08T00:00:00Z",
+      "count": 4,
+      "uniques": 3
     }
   ]
 }
