@@ -1,3 +1,9 @@
+2022-04-08T16:24:32Z:
+* notice: last 14d: all unq: 49 18
+* notice: prev accum: outdated-all outdated-unq / all unq: 61 47 / 106 72
+* notice: next accum: outdated-all outdated-unq / all unq: 61 47 / 110 75
+* notice: prev json diff // prev day diff: unq all: +3 +4 / -0 -0 // +3 +4 / -0 -0
+
 2022-04-07T01:15:45Z:
 * notice: last 14d: all unq: 45 18
 * notice: prev accum: outdated-all outdated-unq / all unq: 50 40 / 98 67
